// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test creation of a simple Slider control 1`] = `
<Slider
  bottom=""
  className=""
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage=""
  focus={false}
  height=""
  id=""
  left=""
  location="none"
  max={50}
  min={1}
  noedit={false}
  nohover={false}
  noripple={false}
  obj="Slider"
  onSelect={[Function]}
  padding=""
  scale={2}
  selected={false}
  sizing="normal"
  snap={true}
  startPosition={0}
  style={Object {}}
  testing={true}
  theme={null}
  ticks={5}
  tooltip=""
  top=""
  visible={true}
  width=""
  xcss={null}
>
  <Wrapper
    bottom=""
    className=""
    contentEditable={false}
    controlled={true}
    direction="right"
    disabled={false}
    err={null}
    errorMessage=""
    focus={false}
    height=""
    id=""
    left=""
    location="none"
    max={50}
    min={1}
    noedit={false}
    nohover={false}
    noripple={false}
    obj="Slider"
    onError={[Function]}
    onSelect={[Function]}
    padding=""
    reset={false}
    scale={2}
    selected={false}
    sizing="normal"
    snap={true}
    startPosition={0}
    style={Object {}}
    testing={true}
    theme={null}
    ticks={5}
    tooltip=""
    top=""
    visible={true}
    width=""
    xcss={null}
  >
    <ThemeProvider
      theme={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#c0c0c0",
          "color": "#000000",
          "headerBackgroundColor": "#004358",
          "headerForegroundColor": "#ffffff",
          "headerHoverColor": "#ffe11a",
          "hoverColor": "#c0c0c0",
          "inputBorderColor": "#c0c0c0",
          "itemHoverColor": "#bedb39",
          "selectedBackgroundColor": "#1f8a70",
          "selectedForegroundColor": "#ffe11a",
          "tooltipBackgroundColor": "#708090",
          "tooltipForegroundColor": "#ffffff",
          "transitionDelay": "0.5s",
        }
      }
    >
      <styled.div
        className="ui-slider"
        disabled={false}
        height={20}
        visible={true}
        width={118}
      >
        <div
          className="ui-slider sc-htpNat KQfGP"
          disabled={false}
          height={20}
          width={118}
        >
          <styled.div
            className="ui-slider-bar"
            height={4}
            innerRef={[Function]}
            width={98}
          >
            <div
              className="ui-slider-bar sc-bwzfXH leykRn"
              height={4}
              width={98}
            >
              <styled.div
                className="ui-slider-tick"
                id="0"
                key="0"
                left={-1}
              >
                <div
                  className="ui-slider-tick sc-ifAKCX cvZUBx"
                  id="0"
                />
              </styled.div>
              <styled.div
                className="ui-slider-tick"
                id="1"
                key="1"
                left={23.5}
              >
                <div
                  className="ui-slider-tick sc-ifAKCX cwDhrr"
                  id="1"
                />
              </styled.div>
              <styled.div
                className="ui-slider-tick"
                id="2"
                key="2"
                left={48}
              >
                <div
                  className="ui-slider-tick sc-ifAKCX eqsOzF"
                  id="2"
                />
              </styled.div>
              <styled.div
                className="ui-slider-tick"
                id="3"
                key="3"
                left={72.5}
              >
                <div
                  className="ui-slider-tick sc-ifAKCX hkmeQv"
                  id="3"
                />
              </styled.div>
              <styled.div
                className="ui-slider-tick"
                id="4"
                key="4"
                left={97}
              >
                <div
                  className="ui-slider-tick sc-ifAKCX dOrTLF"
                  id="4"
                />
              </styled.div>
              <styled.div
                className="ui-slider-tick"
                id="5"
                key="5"
                left={99}
              >
                <div
                  className="ui-slider-tick sc-ifAKCX dFbRIn"
                  id="5"
                />
              </styled.div>
              <styled.div
                className="ui-slider-element"
                left={-9}
                onMouseDown={[Function]}
                sizing="normal"
              >
                <div
                  className="ui-slider-element sc-bxivhb iHkWne"
                  onMouseDown={[Function]}
                />
              </styled.div>
            </div>
          </styled.div>
        </div>
      </styled.div>
    </ThemeProvider>
  </Wrapper>
</Slider>
`;

exports[`Test disabling a Slider control 1`] = `
<Slider
  bottom=""
  className=""
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={true}
  err={null}
  errorMessage=""
  focus={false}
  height=""
  id=""
  left=""
  location="none"
  max={100}
  min={0}
  noedit={false}
  nohover={false}
  noripple={false}
  obj="Slider"
  onSelect={[Function]}
  padding=""
  scale={2}
  selected={false}
  sizing="normal"
  snap={true}
  startPosition={0}
  style={Object {}}
  testing={true}
  theme={null}
  ticks={5}
  tooltip=""
  top=""
  visible={true}
  width=""
  xcss={null}
>
  <Wrapper
    bottom=""
    className=""
    contentEditable={false}
    controlled={true}
    direction="right"
    disabled={true}
    err={null}
    errorMessage=""
    focus={false}
    height=""
    id=""
    left=""
    location="none"
    max={100}
    min={0}
    noedit={false}
    nohover={false}
    noripple={false}
    obj="Slider"
    onError={[Function]}
    onSelect={[Function]}
    padding=""
    reset={false}
    scale={2}
    selected={false}
    sizing="normal"
    snap={true}
    startPosition={0}
    style={Object {}}
    testing={true}
    theme={null}
    ticks={5}
    tooltip=""
    top=""
    visible={true}
    width=""
    xcss={null}
  >
    <ThemeProvider
      theme={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#c0c0c0",
          "color": "#000000",
          "headerBackgroundColor": "#004358",
          "headerForegroundColor": "#ffffff",
          "headerHoverColor": "#ffe11a",
          "hoverColor": "#c0c0c0",
          "inputBorderColor": "#c0c0c0",
          "itemHoverColor": "#bedb39",
          "selectedBackgroundColor": "#1f8a70",
          "selectedForegroundColor": "#ffe11a",
          "tooltipBackgroundColor": "#708090",
          "tooltipForegroundColor": "#ffffff",
          "transitionDelay": "0.5s",
        }
      }
    >
      <styled.div
        className="ui-slider"
        disabled={true}
        height={20}
        visible={true}
        width={220}
      >
        <div
          className="ui-slider sc-htpNat gbjngv"
          disabled={true}
          height={20}
          width={220}
        >
          <styled.div
            className="ui-slider-bar"
            height={4}
            innerRef={[Function]}
            width={200}
          >
            <div
              className="ui-slider-bar sc-bwzfXH jZDsMg"
              height={4}
              width={200}
            >
              <styled.div
                className="ui-slider-tick"
                id="0"
                key="0"
                left={-1}
              >
                <div
                  className="ui-slider-tick sc-ifAKCX cvZUBx"
                  id="0"
                />
              </styled.div>
              <styled.div
                className="ui-slider-tick"
                id="1"
                key="1"
                left={49}
              >
                <div
                  className="ui-slider-tick sc-ifAKCX viUUz"
                  id="1"
                />
              </styled.div>
              <styled.div
                className="ui-slider-tick"
                id="2"
                key="2"
                left={99}
              >
                <div
                  className="ui-slider-tick sc-ifAKCX dFbRIn"
                  id="2"
                />
              </styled.div>
              <styled.div
                className="ui-slider-tick"
                id="3"
                key="3"
                left={149}
              >
                <div
                  className="ui-slider-tick sc-ifAKCX bXhMDZ"
                  id="3"
                />
              </styled.div>
              <styled.div
                className="ui-slider-tick"
                id="4"
                key="4"
                left={199}
              >
                <div
                  className="ui-slider-tick sc-ifAKCX dLirKH"
                  id="4"
                />
              </styled.div>
              <styled.div
                className="ui-slider-element"
                left={-9}
                onMouseDown={[Function]}
                sizing="normal"
              >
                <div
                  className="ui-slider-element sc-bxivhb iHkWne"
                  onMouseDown={[Function]}
                />
              </styled.div>
            </div>
          </styled.div>
        </div>
      </styled.div>
    </ThemeProvider>
  </Wrapper>
</Slider>
`;

exports[`Test retrieval of Slider props object 1`] = `
Object {
  "bottom": "",
  "children": null,
  "className": "",
  "contentEditable": false,
  "controlled": true,
  "direction": "right",
  "disabled": false,
  "err": null,
  "errorMessage": "",
  "focus": false,
  "height": "",
  "id": "",
  "left": "",
  "location": "none",
  "max": 100,
  "min": 0,
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "obj": "Slider",
  "onSelect": [Function],
  "padding": "",
  "scale": 1,
  "selected": false,
  "sizing": "normal",
  "snap": false,
  "startPosition": 0,
  "style": Object {},
  "testing": true,
  "theme": null,
  "ticks": 0,
  "tooltip": "",
  "top": "",
  "visible": true,
  "width": "",
  "xcss": null,
}
`;

exports[`Test with bad min/max values 1`] = `
<Slider
  bottom=""
  className=""
  contentEditable={false}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage=""
  focus={false}
  height=""
  id=""
  left=""
  location="none"
  max={0}
  min={-1}
  noedit={false}
  nohover={false}
  noripple={false}
  obj="Slider"
  onSelect={[Function]}
  padding=""
  scale={1}
  selected={false}
  sizing="normal"
  snap={false}
  startPosition={0}
  style={Object {}}
  testing={true}
  theme={null}
  ticks={0}
  tooltip=""
  top=""
  visible={true}
  width=""
  xcss={null}
>
  <Wrapper
    bottom=""
    className=""
    contentEditable={false}
    controlled={true}
    direction="right"
    disabled={false}
    err={null}
    errorMessage=""
    focus={false}
    height=""
    id=""
    left=""
    location="none"
    max={0}
    min={-1}
    noedit={false}
    nohover={false}
    noripple={false}
    obj="Slider"
    onError={[Function]}
    onSelect={[Function]}
    padding=""
    reset={false}
    scale={1}
    selected={false}
    sizing="normal"
    snap={false}
    startPosition={0}
    style={Object {}}
    testing={true}
    theme={null}
    ticks={0}
    tooltip=""
    top=""
    visible={true}
    width=""
    xcss={null}
  >
    <ThemeProvider
      theme={
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#c0c0c0",
          "color": "#000000",
          "headerBackgroundColor": "#004358",
          "headerForegroundColor": "#ffffff",
          "headerHoverColor": "#ffe11a",
          "hoverColor": "#c0c0c0",
          "inputBorderColor": "#c0c0c0",
          "itemHoverColor": "#bedb39",
          "selectedBackgroundColor": "#1f8a70",
          "selectedForegroundColor": "#ffe11a",
          "tooltipBackgroundColor": "#708090",
          "tooltipForegroundColor": "#ffffff",
          "transitionDelay": "0.5s",
        }
      }
    >
      <styled.div
        className="ui-slider"
        disabled={false}
        height={20}
        visible={true}
        width={21}
      >
        <div
          className="ui-slider sc-htpNat kDtMwL"
          disabled={false}
          height={20}
          width={21}
        >
          <styled.div
            className="ui-slider-bar"
            height={4}
            innerRef={[Function]}
            width={1}
          >
            <div
              className="ui-slider-bar sc-bwzfXH cGIFmz"
              height={4}
              width={1}
            >
              <styled.div
                className="ui-slider-element"
                left={-9}
                onMouseDown={[Function]}
                sizing="normal"
              >
                <div
                  className="ui-slider-element sc-bxivhb iHkWne"
                  onMouseDown={[Function]}
                />
              </styled.div>
            </div>
          </styled.div>
        </div>
      </styled.div>
    </ThemeProvider>
  </Wrapper>
</Slider>
`;
